--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.1",
+    "nodemailer": "^6.10.1",
     "nodemon": "^3.1.9"
   }
 }
